--- a/BreakPoint/View/Base.lproj/Main.storyboard
+++ b/BreakPoint/View/Base.lproj/Main.storyboard
@@ -33,6 +33,9 @@
                                             <constraint firstAttribute="width" constant="30" id="eTg-kz-NY3"/>
                                         </constraints>
                                         <state key="normal" image="compose"/>
+                                        <connections>
+                                            <segue destination="NjJ-lT-ozm" kind="presentation" identifier="CreatePost" id="Fg2-ke-Ued"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_feed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A6H-Zc-gkt">
                                         <rect key="frame" x="160.33333333333334" y="64.666666666666671" width="54.333333333333343" height="21"/>
@@ -198,7 +201,115 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KUD-C4-LNE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1428" y="0.0"/>
+            <point key="canvasLocation" x="2066" y="0.0"/>
+        </scene>
+        <!--Create PostVC-->
+        <scene sceneID="TpL-sj-c9x">
+            <objects>
+                <viewController storyboardIdentifier="CreatePostVC" id="NjJ-lT-ozm" customClass="CreatePostVC" customModule="BreakPoint" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="s1E-Sf-ptT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tBe-O2-9Ut">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_post" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhi-pv-6Uk">
+                                        <rect key="frame" x="160.66666666666666" y="64.666666666666671" width="54.333333333333343" height="21"/>
+                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
+                                        <color key="textColor" red="0.606446445" green="0.81774991750000003" blue="0.3750501275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QjJ-kv-XqM">
+                                        <rect key="frame" x="20" y="60" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="BUW-lN-Chw"/>
+                                            <constraint firstAttribute="width" constant="30" id="qgv-7l-GvB"/>
+                                        </constraints>
+                                        <state key="normal" image="close"/>
+                                        <connections>
+                                            <action selector="cancel:" destination="NjJ-lT-ozm" eventType="touchUpInside" id="ppa-eW-LMM"/>
+                                            <action selector="signout:" destination="FbU-M4-ZFI" eventType="touchUpInside" id="xdV-Da-Zs2"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="0yU-1y-bn8"/>
+                                    <constraint firstItem="hhi-pv-6Uk" firstAttribute="centerY" secondItem="QjJ-kv-XqM" secondAttribute="centerY" id="4uf-lU-yd1"/>
+                                    <constraint firstItem="QjJ-kv-XqM" firstAttribute="leading" secondItem="tBe-O2-9Ut" secondAttribute="leading" constant="20" id="C4R-oZ-hGj"/>
+                                    <constraint firstItem="hhi-pv-6Uk" firstAttribute="centerX" secondItem="tBe-O2-9Ut" secondAttribute="centerX" id="Kcj-iF-FCB"/>
+                                    <constraint firstAttribute="bottom" secondItem="QjJ-kv-XqM" secondAttribute="bottom" constant="10" id="qHc-xH-W4o"/>
+                                </constraints>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="BW7-6j-ubB">
+                                <rect key="frame" x="20" y="120" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Rr7-1e-NAt"/>
+                                    <constraint firstAttribute="width" constant="60" id="pPS-hM-m9k"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="user@breakpoint.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YTj-EE-HSG">
+                                <rect key="frame" x="96" y="140" width="263" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="E8d-wY-1nG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
+                                <color key="textColor" red="0.0" green="0.72516298290000003" blue="0.81412178280000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="start posting here..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9Qk-yv-WKt">
+                                <rect key="frame" x="20" y="200" width="335" height="522"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYi-zU-dPI">
+                                <rect key="frame" x="0.0" y="742" width="375" height="70"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="ZcH-CB-3Sx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="20"/>
+                                <state key="normal" title=" SEND" image="send">
+                                    <color key="titleColor" red="0.30214685201644897" green="0.74723225831985474" blue="0.33267867565155029" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="send:" destination="NjJ-lT-ozm" eventType="touchUpInside" id="blS-LB-6dt"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YTj-EE-HSG" firstAttribute="centerY" secondItem="BW7-6j-ubB" secondAttribute="centerY" id="4sj-bg-wEY"/>
+                            <constraint firstItem="9Qk-yv-WKt" firstAttribute="leading" secondItem="3Ia-vb-0A4" secondAttribute="leading" constant="20" id="DRa-wN-wH9"/>
+                            <constraint firstItem="xYi-zU-dPI" firstAttribute="trailing" secondItem="3Ia-vb-0A4" secondAttribute="trailing" id="EOt-Mu-RPc"/>
+                            <constraint firstItem="tBe-O2-9Ut" firstAttribute="trailing" secondItem="3Ia-vb-0A4" secondAttribute="trailing" id="KLW-2d-wCw"/>
+                            <constraint firstItem="BW7-6j-ubB" firstAttribute="top" secondItem="tBe-O2-9Ut" secondAttribute="bottom" constant="20" id="KQC-XJ-oew"/>
+                            <constraint firstItem="xYi-zU-dPI" firstAttribute="leading" secondItem="3Ia-vb-0A4" secondAttribute="leading" id="RR0-Iu-z2f"/>
+                            <constraint firstItem="tBe-O2-9Ut" firstAttribute="top" secondItem="s1E-Sf-ptT" secondAttribute="top" id="dP1-9O-5SP"/>
+                            <constraint firstItem="3Ia-vb-0A4" firstAttribute="trailing" secondItem="YTj-EE-HSG" secondAttribute="trailing" constant="16" id="e4n-hh-zg9"/>
+                            <constraint firstItem="xYi-zU-dPI" firstAttribute="top" secondItem="9Qk-yv-WKt" secondAttribute="bottom" constant="20" id="euj-PE-y6c"/>
+                            <constraint firstItem="3Ia-vb-0A4" firstAttribute="trailing" secondItem="9Qk-yv-WKt" secondAttribute="trailing" constant="20" id="hrD-nj-2H6"/>
+                            <constraint firstItem="tBe-O2-9Ut" firstAttribute="leading" secondItem="3Ia-vb-0A4" secondAttribute="leading" id="nkW-gu-96Y"/>
+                            <constraint firstItem="BW7-6j-ubB" firstAttribute="leading" secondItem="3Ia-vb-0A4" secondAttribute="leading" constant="20" id="srw-Kv-CXi"/>
+                            <constraint firstItem="9Qk-yv-WKt" firstAttribute="top" secondItem="BW7-6j-ubB" secondAttribute="bottom" constant="20" id="tUE-BJ-RWR"/>
+                            <constraint firstAttribute="bottom" secondItem="xYi-zU-dPI" secondAttribute="bottom" id="uoI-Ep-sYk"/>
+                            <constraint firstItem="YTj-EE-HSG" firstAttribute="leading" secondItem="BW7-6j-ubB" secondAttribute="trailing" constant="16" id="wAf-HR-tj5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="3Ia-vb-0A4"/>
+                    </view>
+                    <connections>
+                        <outlet property="email" destination="YTj-EE-HSG" id="al1-V7-1P2"/>
+                        <outlet property="profileImage" destination="BW7-6j-ubB" id="rxL-X5-JWC"/>
+                        <outlet property="sendButton" destination="xYi-zU-dPI" id="dN9-qp-eGH"/>
+                        <outlet property="textView" destination="9Qk-yv-WKt" id="Vs6-bm-mA3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uif-2C-OQA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1402" y="-321"/>
         </scene>
         <!--AuthVC-->
         <scene sceneID="lD2-xm-fDs">
@@ -478,7 +589,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r9c-lE-0wV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-734" y="0.0"/>
+            <point key="canvasLocation" x="-774" y="0.0"/>
         </scene>
         <!--Groups-->
         <scene sceneID="wg7-f3-ORb">
@@ -568,7 +679,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="0.0" y="0.0"/>
+            <point key="canvasLocation" x="-38" y="0.0"/>
         </scene>
     </scenes>
     <resources>
@@ -582,6 +693,7 @@
         <image name="loginBGImage" width="375" height="284"/>
         <image name="logoutIcon" width="19" height="21"/>
         <image name="me-tabIcon" width="25" height="25"/>
+        <image name="send" width="29" height="29"/>
     </resources>
     <color key="tintColor" red="0.606446445" green="0.81774991750000003" blue="0.3750501275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
